# lex

./: .gitignore  Cargo.toml  README.md  TLex.org  fake.rs  log.txt  src.lq  texture.txt  wrong.lq
src/: graph.rs  lex.rs  lib.rs  macros.rs  main.rs  token.rs  word.rs
src/syntax/: mod.rs
src/token/: data_struct.rs  mod.rs  stream.rs
