[package]
name = "lq"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = "1.0"
colored = "2"
chrono = "0.4"
rayon = "*"
lazy_static = "*"
regex = "*"
tracing = "*"
tracing-subscriber = "*"